--- a/platform-config.env
+++ b/platform-config.env
@@ -3,5 +3,5 @@
 BROKER_TYPE=redpanda
 
 # Kafka Configuration
-KAFKA_BROKER=localhost:9092
+KAFKA_BROKER=redpanda:9092
 KAFKA_TOPICS=iot_messages:1:1,alarms:1:1 
