--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,11 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@kafkajs/confluent-schema-registry": "^3.2.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "kafkajs": "1.15.0"
+    "kafkajs": "1.15.0",
+    "pg": "^8.14.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
