--- a/deployment/docker-compose.confluent.yml
+++ b/deployment/docker-compose.confluent.yml
@@ -25,7 +25,6 @@ services:
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
       KAFKA_DELETE_TOPIC_ENABLE: "true"
       KAFKA_SCHEMA_REGISTRY_URL: "http://schema-registry:8081"
-      KAFKA_ZOOKEEPER_CONNECT: ""
     volumes:
       - kafka_data:/var/lib/kafka/data
     user: appuser:appuser
@@ -122,7 +121,7 @@ services:
       CONNECT_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       CONNECT_KEY_CONVERTER_SCHEMAS_ENABLE: "false"
       CONNECT_VALUE_CONVERTER_SCHEMAS_ENABLE: "false"
-      CONNECT_PLUGIN_PATH: "/usr/share/java,/usr/share/confluent-hub-components,/usr/share/kafka-connect-plugins"
+      CONNECT_PLUGIN_PATH: "/usr/share/java,/usr/share/confluent-hub-components"
       CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR: 1
       CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR: 1
       CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: 1
@@ -133,7 +132,6 @@ services:
     volumes:
       - connect_plugins:/usr/share/confluent-hub-components
       - ./scripts:/connect
-      - ./kafka-connect-plugins:/usr/share/kafka-connect-plugins
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8083/connectors"]
       interval: 10s
@@ -160,7 +158,7 @@ services:
 
   connector-creator:
     build:
-      context: ../deployment
+      context: .
       dockerfile: dockerfiles/Dockerfile.connector-creator
     container_name: connector-creator
     depends_on:
@@ -169,11 +167,13 @@ services:
     networks:
       - platform_kafka-network
     volumes:
-      - ./kafka-connect:/kafka-connect
+      - ../deployment/kafka-connect:/kafka-connect
+      - ../deployment/scripts:/scripts
     environment:
       - CONNECT_URL=http://connect:8083
       - MAX_RETRIES=30
       - RETRY_DELAY=5
+    entrypoint: ["/scripts/manage-connectors.sh"]
     restart: on-failure:3
 
 volumes:
